src/objects/NPA_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Program_Category__c</fullName>
        <label>Program Category</label>
        <picklist>
            <picklistValues>
                <fullName>ABI - Acquired Brain Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADH-Adult Day Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY - At-Risk-Youth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD - Intellectual / Developmental Disabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Disability / Medical Condition / Sensory Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Population__c</fullName>
        <label>Program Primary Population</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Adults and Children</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10A__c</fullName>
        <description>If behavioral support needs have been identified for this person, are there documented strategies in place to address the identified behaviors? Select Not Applicable only if behavioral supports have not been identified.</description>
        <label>Q10A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10B__c</fullName>
        <description>If this individual has a written plan in place to address a behavior, then is the data being collected to monitor the effectiveness of the interventions? Select Not Applicable if a written plan is not in place OR if data collection is not required.</description>
        <label>Q10B</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10C__c</fullName>
        <description>If a written plan is in place to address a behavior, have all consents been signed by appropriate parties as is required by regulation? Select Not Applicable IF there is no written plan OR if regulations do not require consents.</description>
        <label>Q10C</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10D__c</fullName>
        <description>Detail</description>
        <label>Q10D</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q11A__c</fullName>
        <description>Frequency of host home vists meets requirements and is documented in the file.</description>
        <label>Q11A</label>
        <picklist>
            <controllingField>Service_Setting__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11B__c</fullName>
        <description>Detail</description>
        <label>Q11B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q12A__c</fullName>
        <label>Q12A</label>
        <picklist>
            <picklistValues>
                <fullName>Rep-Payee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assists Individual with personal funds management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither Rep-Payee nor Assists</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12B__c</fullName>
        <label>Q12B</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12C1__c</fullName>
        <label>Q12C1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12C2__c</fullName>
        <label>Q12C2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12D1__c</fullName>
        <label>Q12D1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12D2__c</fullName>
        <label>Q12D2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12E1__c</fullName>
        <label>Q12E1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12E2__c</fullName>
        <label>Q12E2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12E3__c</fullName>
        <label>Q12E3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12F__c</fullName>
        <label>Q12F</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12G1__c</fullName>
        <label>Q12G1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12G2__c</fullName>
        <label>Q12G2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12G3__c</fullName>
        <label>Q12G3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4F__c</fullName>
        <description>Does documentation verify that unmet standards were resolved</description>
        <label>Q4F</label>
        <picklist>
            <controllingField>Q4E__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a QA Audit ?</description>
        <inlineHelpText>If this Audit contains a QA component,  check this box, otherwise uncheck it</inlineHelpText>
        <label>Quality Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QExcA__c</fullName>
        <label>QExcA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QExcB__c</fullName>
        <label>QExcB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QExcC__c</fullName>
        <label>QExcC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QualityExceptions_ClientFunds__c</fullName>
        <formula>0 + 
(if (ISPICKVAL(Q12C1__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q12D1__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q12E1__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(Q12G1__c,&quot;No&quot;),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Exceptions (Client Funds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QualityExceptions__c</fullName>
        <formula>0 + 
(if (ISPICKVAL(Q1A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q2A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q3A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q4A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q4F__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q5A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q5C__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q6A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q7A__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q8A__c,&quot;No&quot;),1,0))+
(if (ISPICKVAL(Q9A__c,&quot;No&quot;),1,0))+
(if (ISPICKVAL(Q10B__c,&quot;No&quot;),1,0))+
(if (ISPICKVAL(Q11A__c,&quot;No&quot;),1,0))+
(if (ISPICKVAL(Q12B__c,&quot;No&quot;),1,0)) + 
(if (ISPICKVAL(Q12F__c,&quot;No&quot;),1,0))+
QualityExceptions_ClientFunds__c</formula>
        <label>Quality Exceptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date that the Audit was started</description>
        <inlineHelpText>Date that the Audit was started</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name_1__c</fullName>
        <description>Name of the first reviewer</description>
        <label>Reviewer Name 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name_2__c</fullName>
        <description>Name of reviewer # 2</description>
        <label>Reviewer Name 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name_3__c</fullName>
        <description>Name of reviewer # 3</description>
        <label>Reviewer Name 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Title_1__c</fullName>
        <description>Title of Reviewer # 1</description>
        <label>Reviewer Title 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Title_2__c</fullName>
        <description>Title of reviewer # 2</description>
        <label>Reviewer Title 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Title_3__c</fullName>
        <description>Title of reviewer # 3</description>
        <label>Reviewer Title 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Type_1__c</fullName>
        <description>type for reviewer #1</description>
        <label>Reviewer Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer_Type_2__c</fullName>
        <description>type of reviewer # 2</description>
        <label>Reviewer Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer_Type_3__c</fullName>
        <description>Type of reviewer # 3</description>
        <label>Reviewer Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Scope__c</fullName>
        <description>Scope of Responsibility for Audited Service</description>
        <inlineHelpText>Scope of Responsibility for Audited Service</inlineHelpText>
        <label>Service Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Residential (24/7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential ( &lt; 24/7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodic ( &lt; 24/7)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Setting__c</fullName>
        <label>Service Setting</label>
        <picklist>
            <controllingField>HHP_Audit__c</controllingField>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community / Neighborhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICF/MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adolescent Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Family Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management / Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical / Outpatient Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Behavioral Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Stabilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation / Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Services - Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Services - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medically Fragile / TFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurobehavioral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurorehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offender Services / Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Habilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite Services (not for host home model)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared / Supported Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheltered Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Foster Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitional Living</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Audited__c</fullName>
        <description>Specify specific services being audited</description>
        <inlineHelpText>Specify specific services being audited</inlineHelpText>
        <label>Services Audited</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>Timeframe on Audited Documents (should be 3 months trailing audit)</description>
        <inlineHelpText>Timefram on Audited Documents (should be 3 months trailing audit)</inlineHelpText>
        <label>Timeframe</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>NPA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_First_Name__c</columns>
        <columns>Client_Last_Name__c</columns>
        <columns>HHP_First_Name__c</columns>
        <columns>HHP_Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Client_First_Name__c</columns>
        <columns>Client_Last_Name__c</columns>
        <columns>HHP_First_Name__c</columns>
        <columns>HHP_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All2</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>AuditID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPA</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Audit_Section_musthaveOne</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Final&apos;)
&amp;&amp;
 HHP_Audit__c == False
&amp;&amp;
 QA_Audit__c == False
&amp;&amp;
 Billing_Audit__c == False</errorConditionFormula>
        <errorMessage>Core Tab - there must be at least one audit section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conditional_Q12a</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( Q12A__c , &apos;Rep-Payee&apos;) || ISPICKVAL( Q12A__c , &apos;Assists Individual with personal funds management&apos;))
&amp;&amp;
ISPICKVAL(  Q12C1__c  , &apos;Not Applicable&apos;) &amp;&amp;
ISPICKVAL( Q12D1__c , &apos;Not Applicable&apos;)&amp;&amp;
ISPICKVAL( Q12E1__c , &apos;Not Applicable&apos;) &amp;&amp;
ISPICKVAL( Q12G1__c , &apos;Not Applicable&apos;)</errorConditionFormula>
        <errorDisplayField>Q12A__c</errorDisplayField>
        <errorMessage>The quality fields 12c-i, 12d-i,12e-i and 12g-i can&apos;t all be Not Applicable with the current 12a answer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DatesEndLessThanStart</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date can&apos;t be before the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_greater_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &gt; today()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date can&apos;t be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HHP_Client_Names</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( Placement_in_HHP__c ,&apos;No&apos;)  &amp;&amp; 
(! ISBLANK(Client_First_Name__c) || ! ISBLANK( Client_Last_Name__c ) )) 
||
(! ISPICKVAL( Placement_in_HHP__c ,&apos;No&apos;)  &amp;&amp; 
(  ISBLANK(Client_First_Name__c) ||  ISBLANK( Client_Last_Name__c )))</errorConditionFormula>
        <errorDisplayField>Client_First_Name__c</errorDisplayField>
        <errorMessage>Core Tab Client Name is required, unless this is an HHP record audit with no client placement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HHP_HHP_Name</fullName>
        <active>true</active>
        <errorConditionFormula>HHP_Audit__c &amp;&amp; (ISBLANK( HHP_First_Name__c ) || ISBLANK( HHP_Last_Name__c ))</errorConditionFormula>
        <errorDisplayField>HHP_First_Name__c</errorDisplayField>
        <errorMessage>Core Tab HHP First and Last Name are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <errorConditionFormula>Locked__c</errorConditionFormula>
        <errorMessage>The record has been locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Placement_HHP_check</fullName>
        <active>true</active>
        <description>Placement in HHP cannot be null if this is an HHP Audit</description>
        <errorConditionFormula>ISPICKVAL ( Placement_in_HHP__c , &quot;&quot;) &amp;&amp; HHP_Audit__c</errorConditionFormula>
        <errorDisplayField>Placement_in_HHP__c</errorDisplayField>
        <errorMessage>HHP Audits require a value in the Placement in HHP field - please select  &apos;Yes&apos; or &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q12a_is_Neither</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Q12A__c, &apos;Neither Rep-Payee nor Assists&apos;)&amp;&amp; ISPICKVAL(Status__c, &apos;Final&apos;)&amp;&amp;
(
! ISPICKVAL( Q12C1__c, &apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12C2__c, &apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12C3__c, &apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12D1__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12D2__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12D3__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12E1__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12E2__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12E3__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12G1__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12G2__c ,&apos;Not Applicable&apos;) ||
! ISPICKVAL( Q12G3__c ,&apos;Not Applicable&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Q12A__c</errorDisplayField>
        <errorMessage>Quality Tab – When 12a is ‘Neither Rep-Payee nor Assists’, all 12 questions 12C-i through 12e-iii and 12gi through 12g-iii must be Not Applicable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q12c1_No_NA</fullName>
        <active>true</active>
        <errorConditionFormula>( ISPICKVAL(Q12C1__c, &apos;No&apos;)  ||  ISPICKVAL(Q12C1__c, &apos;Not Applicable&apos;) )  &amp;&amp; ! ISPICKVAL( Q12C2__c, &apos;Not Applicable&apos; )</errorConditionFormula>
        <errorDisplayField>Q12C2__c</errorDisplayField>
        <errorMessage>If Quality Tab 12c-i is &apos;No&apos; or &apos;Not Applicable&apos;, then 12c-ii must be &apos;Not Applicable&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Q12c2_No_NA</fullName>
        <active>true</active>
        <errorConditionFormula>( ISPICKVAL(Q12C2__c, &apos;No&apos;)  ||  ISPICKVAL(Q12C2__c, &apos;Not Applicable&apos;) )  &amp;&amp; ! ISPICKVAL( Q12C3__c, &apos;Not Applicable&apos; )</errorConditionFormula>
        <errorDisplayField>Q12C3__c</errorDisplayField>
        <errorMessage>3.	If Quality Tab 12c-ii is &apos;No&apos; or &apos;Not Applicable&apos;, then 12c-iii must be &apos;Not Applicable&apos;.</errorMessage>
    </validationRules>
</CustomObject>